fix layout on mobile devices

--- a/app/assets/stylesheets/staffs.css.sass
+++ b/app/assets/stylesheets/staffs.css.sass
@@ -18,5 +18,11 @@
     a
       text-decoration: none
 
+
+
 .stuff_popup
   padding: 30px !important
+  width: 30% !important
+  margin-left: -20% !important
+
+  .stuff_popup_item
